# tiff-enrichment-pipeline

./: .dockerignore  .env.template  .gitignore  CONTAINER_PUBLISHING.md  Dockerfile  Makefile  Makefile.published  QUICKSTART.md  README.md  README_STEP.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.published.yml  docker-compose.yml  goals.md  pyproject.toml  requirements-visualization.txt  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml  security-scan.yml  test.yml
config/: .gitkeep
config/dev/: settings.yml
data/input/: .gitkeep
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: pipeline.json
nginx/: nginx.conf
requirements/: base.txt  dev.txt  prod.txt
scripts/: count_tiffs_with_gps.py  create-tables.sql  deploy.sh  extract_gps_to_csv_json.py  init-db.sql  process_micasense.py  show_tiff_geo_info.py  test_micasense.sh  visualize_indices.py  visualize_tiff_locations.py
src/pipeline/: __init__.py  health.py  main.py  micasense_processor.py  watcher.py
src/pipeline/micasense/: __main__.py  config.py
src/pipeline/micasense/core/: config.py  errors.py  processor.py  validation.py
src/pipeline/micasense/output/: metadata.py  visualizer.py
src/pipeline/monitoring/: rasterio_monitor.py
src/pipeline/utils/: gps_utils.py  rasterio_utils.py
tests/: .gitkeep  benchmark_indices.py  conftest.py  test_config.json  test_integration.py  test_micasense_processor.py  test_performance.py  test_rasterio_monitor.py  test_rasterio_utils.py  test_vegetation_indices.py
(+3 files in other folders)
